--- a/packages/react-components/package.json
+++ b/packages/react-components/package.json
@@ -41,7 +41,6 @@
     "@storybook/addon-info": "^5.3.14",
     "@storybook/addon-knobs": "^5.3.14",
     "@storybook/react": "^5.3.14",
-    "@types/classnames": "^2.2.9",
     "@types/react": "^16.9.22",
     "@types/storybook__addon-info": "^5.2.1",
     "@types/storybook__react": "^5.2.1",
@@ -54,7 +53,7 @@
     "typescript": "^3.8.2"
   },
   "dependencies": {
-    "classnames": "^2.2.6",
+    "clsx": "^1.1.0",
     "tslib": "^1.11.0"
   },
   "peerDependencies": {
