--- a/packages/react-components/package.json
+++ b/packages/react-components/package.json
@@ -22,7 +22,8 @@
     "compile:esm": "tsc -p .",
     "compile:cjs": "tsc -p . -m commonjs --outDir dist/cjs",
     "compile:esnext": "tsc -p . -t esnext --outDir dist/esnext",
-    "compile:css": "node ./scripts/stylesCompile.js",
+    "compile:css": "sass src/styles/:./css --no-source-map",
+    "compile:theme": "node scripts/themeCreate",
     "clean": "rimraf css && rimraf dist",
     "storybook": "start-storybook -p 3000 -s ./css",
     "dev": "npm run compile:css && npm run storybook"
@@ -49,6 +50,7 @@
     "react": "^16.12.0",
     "react-docgen-typescript-loader": "^3.6.0",
     "rimraf": "^3.0.2",
+    "sass": "^1.26.2",
     "ts-loader": "^6.2.1",
     "typescript": "^3.8.2"
   },
