--- a/package.json
+++ b/package.json
@@ -5,15 +5,20 @@
     "compile": "lerna run compile",
     "lint:js": "eslint --ext .js,.jsx,.ts,.tsx ./",
     "lint:css": "stylelint '**/*.scss'",
-    "bootstrap": "lerna exec npm install"
+    "install_all_dependencies": "lerna bootstrap",
+    "remove_all_dependencies": "lerna clean --yes"
   },
   "devDependencies": {
     "@peculiar/eslint-config": "file:packages/eslint-config",
     "@peculiar/stylelint-config": "file:packages/stylelint-config",
+    "@peculiar/ui-theme": "file:packages/ui-theme",
+    "@types/react": "^16.9.22",
     "eslint": "^6.8.0",
     "lerna": "^3.20.2",
+    "npm-run-all": "^4.1.5",
+    "react": "^16.13.0",
+    "rimraf": "^3.0.2",
     "stylelint": "^13.2.0",
     "typescript": "^3.8.2"
-  },
-  "dependencies": {}
+  }
 }
