--- a/packages/react-components/package.json
+++ b/packages/react-components/package.json
@@ -36,6 +36,13 @@
   "bugs": {
     "url": "https://github.com/PeculiarVentures/react-components/issues"
   },
+  "dependencies": {
+    "clsx": "^1.1.0",
+    "tslib": "^1.11.0"
+  },
+  "peerDependencies": {
+    "react": "^16.12.0"
+  },
   "devDependencies": {
     "@storybook/addon-actions": "^5.3.14",
     "@storybook/addon-info": "^5.3.14",
@@ -44,16 +51,11 @@
     "@types/storybook__addon-info": "^5.2.1",
     "@types/storybook__react": "^5.2.1",
     "awesome-typescript-loader": "^5.2.1",
+    "npm-run-all": "^4.1.5",
     "react-docgen-typescript-loader": "^3.6.0",
+    "rimraf": "^3.0.2",
     "sass": "^1.26.2",
     "ts-loader": "^6.2.1"
-  },
-  "dependencies": {
-    "clsx": "^1.1.0",
-    "tslib": "^1.11.0"
-  },
-  "peerDependencies": {
-    "react": "^16.12.0"
   },
   "files": [
     "dist/",
