--- a/packages/ui-theming/package.json
+++ b/packages/ui-theming/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@peculiar/ui-theme",
+  "name": "@peculiar/ui-theming",
   "version": "0.0.0",
   "private": false,
   "description": "Components theme constructor",
@@ -26,6 +26,11 @@
   },
   "dependencies": {
     "tslib": "^1.11.0"
+  },
+  "devDependencies": {
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^3.0.2",
+    "typescript": "^3.8.3"
   },
   "files": [
     "dist/"
