--- a/packages/react-components/package.json
+++ b/packages/react-components/package.json
@@ -38,12 +38,13 @@
   },
   "dependencies": {
     "clsx": "^1.1.0",
-    "tslib": "^1.11.0"
+    "tslib": "^1.11.1"
   },
   "peerDependencies": {
     "react": "^16.12.0"
   },
   "devDependencies": {
+    "@peculiar/ui-theming": "^0.0.0",
     "@storybook/addon-actions": "^5.3.14",
     "@storybook/addon-info": "^5.3.14",
     "@storybook/addon-knobs": "^5.3.14",
