--- a/packages/karma-scripts/package.json
+++ b/packages/karma-scripts/package.json
@@ -12,5 +12,16 @@
   },
   "bugs": {
     "url": "https://github.com/PeculiarVentures/react-components/issues"
-  }
+  },
+  "dependencies": {
+    "@types/mocha": "^7.0.2",
+    "karma": "^4.4.1",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-coverage": "^2.0.1",
+    "karma-mocha": "^1.3.0",
+    "karma-mocha-reporter": "^2.2.5",
+    "karma-typescript": "^5.0.0",
+    "mocha": "^7.1.0"
+  },
+  "devDependencies": {}
 }
