--- a/packages/ui-utils/package.json
+++ b/packages/ui-utils/package.json
@@ -22,12 +22,17 @@
     "compile:esm": "tsc -p .",
     "compile:cjs": "tsc -p . -m commonjs --outDir dist/cjs",
     "compile:esnext": "tsc -p . -t esnext --outDir dist/esnext",
-    "clean": "rimraf dist"
+    "clean": "rimraf dist",
+    "test:karma": "karma start",
+    "test:karma:debug": "karma start --single-run=false --reporters=mocha --debug"
   },
   "dependencies": {
     "tslib": "^1.11.1"
   },
   "devDependencies": {
+    "@peculiar/karma-scripts": "^0.0.0",
+    "@types/chai": "^4.2.11",
+    "chai": "^4.2.0",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
     "typescript": "^3.8.3"
