--- a/packages/karma-scripts/package.json
+++ b/packages/karma-scripts/package.json
@@ -14,13 +14,17 @@
     "url": "https://github.com/PeculiarVentures/react-components/issues"
   },
   "dependencies": {
+    "@peculiar/webpack-scripts": "^0.0.0",
+    "@types/enzyme": "^3.10.5",
     "@types/mocha": "^7.0.2",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "karma": "^4.4.1",
     "karma-chrome-launcher": "^3.1.0",
     "karma-coverage": "^2.0.1",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.5",
-    "karma-typescript": "^5.0.0",
+    "karma-webpack": "^4.0.2",
     "mocha": "^7.1.0"
   },
   "devDependencies": {}
