--- a/packages/ui-utils/package.json
+++ b/packages/ui-utils/package.json
@@ -33,6 +33,7 @@
     "@peculiar/karma-scripts": "^0.0.0",
     "@types/chai": "^4.2.11",
     "chai": "^4.2.0",
+    "karma": "^4.4.1",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
     "typescript": "^3.8.3"
