feat(utils): Added test run example

--- a/packages/react-components/tsconfig.json
+++ b/packages/react-components/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "../../tsconfig",
   "compilerOptions": {
     "outDir": "./dist/esm",
-    "declarationDir": "./dist/types",
+    "declarationDir": "./dist/types"
   },
   "include": [
     "src/**/*.ts",
