--- a/packages/react-components/package.json
+++ b/packages/react-components/package.json
@@ -26,7 +26,9 @@
     "compile:theme": "node scripts/themeCreate",
     "clean": "rimraf css && rimraf dist",
     "storybook": "start-storybook -p 3000 -s ./css",
-    "dev": "npm run storybook"
+    "dev": "npm run storybook",
+    "test:karma": "karma start",
+    "test:karma:debug": "karma start --single-run=false --reporters=mocha --debug"
   },
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -44,14 +46,18 @@
     "react": "^16.12.0"
   },
   "devDependencies": {
+    "@peculiar/karma-scripts": "^0.0.0",
     "@peculiar/ui-theming": "^0.0.0",
     "@storybook/addon-actions": "^5.3.14",
     "@storybook/addon-info": "^5.3.14",
     "@storybook/addon-knobs": "^5.3.14",
     "@storybook/react": "^5.3.14",
+    "@types/chai": "^4.2.11",
     "@types/storybook__addon-info": "^5.2.1",
     "@types/storybook__react": "^5.2.1",
     "awesome-typescript-loader": "^5.2.1",
+    "chai": "^4.2.0",
+    "karma": "^4.4.1",
     "npm-run-all": "^4.1.5",
     "react-docgen-typescript-loader": "^3.6.0",
     "rimraf": "^3.0.2",
