--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,7 +64,7 @@ workflows:
     jobs:
       - theme-constructor
       - components
-      - docs
+      - docs:
           requires:
             - theme-constructor
             - components
