--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,6 +1,7 @@
 {
   "name": "lib-react-components",
   "version": "0.3.85",
+  "private": false,
   "description": "React components",
   "keywords": [
     "react",
@@ -11,15 +12,14 @@
   ],
   "main": "commonjs/index.js",
   "module": "esm/index.js",
-  "sideEffects": false,
   "scripts": {
     "test": "BABEL_ENV=test NODE_ENV=test jest",
     "lint": "eslint --ext .js,.jsx lib test",
     "build:css": "node lib/utils/build_theme.js",
     "build:commonjs": "BABEL_ENV=commonjs babel lib --out-dir commonjs --ignore *.css,*.sss,*.spec.js,*.spec.jsx --source-maps",
     "build:esm": "BABEL_ENV=esm babel lib --out-dir esm --ignore *.css,*.sss,*.spec.js,*.spec.jsx --source-maps",
-    "build": "npm run build:css && npm run build:commonjs && npm run build:esm",
-    "prebuild": "npm run clean",
+    "build": "yarn run build:css && yarn run build:commonjs && yarn run build:esm",
+    "prebuild": "yarn run clean",
     "clean": "rimraf commonjs esm"
   },
   "repository": {
