--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "react-components-monorepo",
   "private": true,
-  "author": "PeculiarVentures Team",
   "workspaces": [
     "packages/*"
   ],
@@ -17,5 +16,7 @@
   },
   "devDependencies": {
     "lerna": "^3.22.1"
-  }
+  },
+  "author": "PeculiarVentures Team",
+  "license": "AGPL-3.0"
 }
