--- a/packages/theme-constructor/package.json
+++ b/packages/theme-constructor/package.json
@@ -18,8 +18,6 @@
     "type": "git",
     "url": "git+https://github.com/PeculiarVentures/react-components.git"
   },
-  "author": "PeculiarVentures Team",
-  "license": "MIT",
   "bugs": {
     "url": "https://github.com/PeculiarVentures/react-components/issues"
   },
@@ -49,5 +47,7 @@
   },
   "files": [
     "lib/"
-  ]
+  ],
+  "author": "PeculiarVentures Team",
+  "license": "AGPL-3.0"
 }
