--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -14,10 +14,10 @@
   "module": "esm/index.js",
   "scripts": {
     "test": "BABEL_ENV=test NODE_ENV=test jest",
-    "lint": "eslint --ext .js,.jsx lib test",
-    "build:css": "node lib/utils/build_theme.js",
-    "build:commonjs": "BABEL_ENV=commonjs babel lib --out-dir commonjs --ignore *.css,*.sss,*.spec.js,*.spec.jsx --source-maps",
-    "build:esm": "BABEL_ENV=esm babel lib --out-dir esm --ignore *.css,*.sss,*.spec.js,*.spec.jsx --source-maps",
+    "lint": "eslint --ext .js,.jsx ./",
+    "build:css": "node src/utils/build_theme.js",
+    "build:commonjs": "BABEL_ENV=commonjs babel src --out-dir commonjs --ignore *.css,*.sss,*.spec.js,*.spec.jsx --source-maps",
+    "build:esm": "BABEL_ENV=esm babel src --out-dir esm --ignore *.css,*.sss,*.spec.js,*.spec.jsx --source-maps",
     "build": "yarn run build:css && yarn run build:commonjs && yarn run build:esm",
     "prebuild": "yarn run clean",
     "clean": "rimraf commonjs esm"
@@ -69,7 +69,7 @@
     "traverse": "^0.6.6"
   },
   "files": [
-    "lib/",
+    "src/",
     "commonjs/",
     "esm/",
     "index.d.ts"
