feat(ci): Added filter to deploy job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -107,4 +107,8 @@ workflows:
           requires: [
             build
           ]
+          filters:
+            branches:
+              only:
+                - master
 
