--- a/packages/theme-constructor/package.json
+++ b/packages/theme-constructor/package.json
@@ -16,12 +16,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/PeculiarVentures/react-components.git"
+    "url": "git+https://github.com/PeculiarVentures/peculiar-react-components.git"
   },
   "bugs": {
-    "url": "https://github.com/PeculiarVentures/react-components/issues"
+    "url": "https://github.com/PeculiarVentures/peculiar-react-components/issues"
   },
-  "homepage": "https://PeculiarVentures.github.io/react-components/",
+  "homepage": "https://PeculiarVentures.github.io/peculiar-react-components/",
   "devDependencies": {
     "assert": "^1.4.1",
     "babel-eslint": "^8.2.3",
