--- a/packages/docs-app/package.json
+++ b/packages/docs-app/package.json
@@ -7,61 +7,42 @@
     "url": "git+https://github.com/PeculiarVentures/peculiar-react-components.git"
   },
   "scripts": {
-    "development": "cross-env NODE_ENV=development babel-node bundler/run",
-    "production": "cross-env ENV_FILE=./env/production NODE_ENV=production babel-node bundler/run",
-    "build": "cross-env ENV_FILE=./env/production NODE_ENV=build babel-node bundler/run --no-source-map",
-    "deploy:gh-pages": "babel-node bundler/deploy",
-    "clean": "rimraf dst"
+    "start": "node bundler/start",
+    "build": "node bundler/build",
+    "deploy:gh-pages": "node bundler/deploy",
+    "clean": "rimraf dist"
   },
   "bugs": {
     "url": "https://github.com/PeculiarVentures/peculiar-react-components/issues"
   },
   "homepage": "https://PeculiarVentures.github.io/peculiar-react-components/",
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.3",
-    "babel-plugin-dynamic-import-node": "^1.2.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "child_process": "^1.0.2",
-    "compression": "^1.7.2",
+    "@babel/core": "^7.10.3",
+    "@babel/plugin-proposal-class-properties": "^7.10.1",
+    "@babel/preset-env": "^7.10.3",
+    "@babel/preset-react": "^7.10.1",
+    "babel-loader": "^8.1.0",
     "copy-webpack-plugin": "^4.5.0",
-    "cross-env": "^5.1.3",
     "css-loader": "^0.28.10",
     "debug": "^3.1.0",
-    "dotenv": "^5.0.1",
-    "eval": "^0.1.2",
-    "express": "^4.16.2",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "favicons-webpack-plugin": "^1.0.2",
-    "fs-extra": "^5.0.0",
-    "generate-json-webpack-plugin": "^0.2.2",
     "gh-pages": "^1.1.0",
-    "glob": "^7.1.2",
-    "js-beautify": "^1.7.5",
+    "html-webpack-plugin": "^4.3.0",
     "json-loader": "^0.5.7",
     "loader-utils": "^1.1.0",
-    "md5-file": "^4.0.0",
+    "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.9.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "path": "^0.12.7",
-    "platform": "^1.3.5",
     "raw-loader": "^0.5.1",
+    "react-dev-utils": "7.0.3",
     "react-docgen": "^2.21.0",
-    "react-hot-loader": "^4.0.0",
     "rimraf": "^2.6.2",
     "sass-loader": "^7.0.1",
     "style-loader": "^0.20.2",
-    "sw-precache-webpack-plugin": "^0.11.4",
-    "uglify-js": "^3.3.13",
-    "uglifyjs-webpack-plugin": "^1.2.2",
+    "terser-webpack-plugin": "^3.0.6",
     "url-loader": "^1.0.1",
-    "webpack": "^3.11.0",
-    "webpack-dev-middleware": "^1.12.0",
-    "webpack-dev-server": "^2.9.4",
-    "webpack-hot-middleware": "^2.20.0"
+    "webpack": "^4.43.0",
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
     "classnames": "^2.2.5",
