feat(lerna): enable conventionalCommits flag

--- a/lerna.json
+++ b/lerna.json
@@ -4,5 +4,10 @@
   ],
   "version": "independent",
   "npmClient": "yarn",
-  "useWorkspaces": true
+  "useWorkspaces": true,
+  "command": {
+    "publish": {
+      "conventionalCommits": true
+    }
+  }
 }
