--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -37,7 +37,7 @@
   "dependencies": {
     "classnames": "^2.2.5",
     "lib-theme-contructor": "^0.3.1",
-    "prismjs": "^1.14.0",
+    "prismjs": "1.21.0",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
