--- a/packages/theme-constructor/package.json
+++ b/packages/theme-constructor/package.json
@@ -49,5 +49,8 @@
     "src/"
   ],
   "author": "PeculiarVentures Team",
-  "license": "AGPL-3.0"
+  "license": "AGPL-3.0",
+  "engines": {
+    "node": ">=10.0.0"
+  }
 }
