--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -77,5 +77,8 @@
     "index.d.ts"
   ],
   "author": "PeculiarVentures Team",
-  "license": "AGPL-3.0"
+  "license": "AGPL-3.0",
+  "engines": {
+    "node": ">=10.0.0"
+  }
 }
