--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
     "clean": "lerna run --parallel clean",
     "compile": "lerna run compile",
@@ -9,11 +12,6 @@
     "dependencies:remove": "lerna clean --yes"
   },
   "devDependencies": {
-    "@peculiar/eslint-config": "file:packages/eslint-config",
-    "@peculiar/karma-scripts": "file:packages/karma-scripts",
-    "@peculiar/stylelint-config": "file:packages/stylelint-config",
-    "@peculiar/ui-theming": "file:packages/ui-theming",
-    "@peculiar/webpack-scripts": "file:packages/webpack-scripts",
     "@types/react": "^16.9.22",
     "eslint": "^6.8.0",
     "lerna": "^3.20.2",
