--- a/packages/docs-app/package.json
+++ b/packages/docs-app/package.json
@@ -54,6 +54,6 @@
     "react-markdown": "^3.3.4",
     "react-router-dom": "^4.2.2"
   },
-  "author": "PeculiarVentures Team",
+  "author": "PeculiarVentures",
   "license": "AGPL-3.0"
 }
