--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -20,8 +20,8 @@
     "build": "yarn run build:css && yarn run build:commonjs && yarn run build:esm",
     "prebuild": "yarn run clean",
     "clean": "rimraf commonjs esm",
-    "test:karma": "karma start",
-    "test:karma:debug": "karma start --single-run=false --reporters=mocha --debug"
+    "test": "karma start",
+    "test:debug": "karma start --single-run=false --reporters=mocha --debug"
   },
   "repository": {
     "type": "git",
@@ -51,30 +51,21 @@
     "@types/sinon": "^9.0.8",
     "babel-cli": "^6.26.0",
     "babel-eslint": "^8.2.2",
-    "babel-jest": "^23.6.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.26.0",
     "chai": "^4.2.0",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "4.18.2",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.9.0",
-    "eslint-plugin-jest": "^21.27.1",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.9.1",
     "faker": "^4.1.0",
-    "ignore-styles": "^5.0.1",
-    "jest": "^23.6.0",
-    "jsdom": "^11.6.2",
-    "jsdom-global": "^3.0.2",
     "karma": "^5.2.3",
     "rimraf": "^2.6.2",
     "sinon": "^9.2.1",
-    "traverse": "^0.6.6",
     "typescript": "^4.0.5"
   },
   "files": [
