--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 
 aliases:
   - &docker-node-lts
-    - image: circleci/node:lts
+    - image: circleci/node:lts-browsers
 
   - &restore-node-modules-cache
     name: Restore node_modules cache
