chore(security): upgrade prismjs to version 1.23.0

--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -38,7 +38,7 @@
   "dependencies": {
     "classnames": "^2.2.5",
     "lib-theme-contructor": "^0.4.1",
-    "prismjs": "1.21.0",
+    "prismjs": "^1.23.0",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
