--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "publish:canary": "lerna publish --canary"
   },
   "devDependencies": {
-    "lerna": "^3.22.1"
+    "lerna": "4.0.0"
   },
   "author": "PeculiarVentures",
   "license": "AGPL-3.0"
