--- a/packages/karma-scripts/package.json
+++ b/packages/karma-scripts/package.json
@@ -18,7 +18,7 @@
     "@types/enzyme": "^3.10.8",
     "@types/mocha": "^8.2.2",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.6",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.1",
     "karma": "^6.3.2",
     "karma-chrome-launcher": "^3.1.0",
     "karma-coverage": "^2.0.3",
