--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -32,16 +32,14 @@
   },
   "homepage": "https://PeculiarVentures.github.io/peculiar-react-components/",
   "peerDependencies": {
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0"
+    "react": "^16.0.0 || ^17.0.0",
+    "react-dom": "^16.0.0 || ^17.0.0"
   },
   "dependencies": {
     "classnames": "^2.3.1",
     "lib-theme-contructor": "^0.4.1",
     "prismjs": "^1.23.0",
     "prop-types": "^15.6.1",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
     "react-popper": "^1.0.2"
   },
   "devDependencies": {
@@ -64,6 +62,8 @@
     "eslint-plugin-react": "^7.23.2",
     "faker": "^4.1.0",
     "karma": "^6.3.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "rimraf": "^2.6.2",
     "sinon": "^9.2.1",
     "typescript": "^4.2.4"
