--- a/packages/docs-app/package.json
+++ b/packages/docs-app/package.json
@@ -51,8 +51,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-loadable": "^5.3.1",
-    "react-markdown": "^3.3.4",
-    "react-router-dom": "^5.2.0"
+    "react-markdown": "^6.0.2",
+    "react-router-dom": "^5.2.0",
+    "remark-gfm": "^1.0.0"
   },
   "author": "PeculiarVentures",
   "license": "AGPL-3.0"
