--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "lerna run build",
     "clean": "lerna run --parallel clean",
     "lint": "lerna run --parallel lint",
-    "test": "lerna run --parallel test",
+    "test": "lerna run test",
     "dev:docs-app": "yarn --cwd packages/docs-app start",
     "bootstrap": "yarn",
     "bootstrap:upgrade": "yarn upgrade-interactive --latest",
