--- a/packages/docs-app/package.json
+++ b/packages/docs-app/package.json
@@ -30,7 +30,7 @@
     "json-loader": "^0.5.7",
     "loader-utils": "^1.1.0",
     "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^6.0.0",
+    "sass": "^1.50.0",
     "optimize-css-assets-webpack-plugin": "^6.0.0",
     "path": "^0.12.7",
     "raw-loader": "^0.5.1",
