--- a/packages/theme-constructor/package.json
+++ b/packages/theme-constructor/package.json
@@ -11,7 +11,7 @@
   ],
   "main": "src/index.js",
   "scripts": {
-    "test": "NODE_ENV=test mocha --opts ./mocha.opts",
+    "test": "NODE_ENV=test mocha",
     "lint": "eslint --ext .js ./"
   },
   "repository": {
@@ -31,7 +31,7 @@
     "eslint-plugin-jest": "^22.21.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.23.2",
-    "mocha": "^5.1.1"
+    "mocha": "^8.3.2"
   },
   "dependencies": {
     "autoprefixer": "^10.2.5",
